# MLSys-Experiments

./: .gitignore  .gitmodules  README.md
MX_datatypes/: list_float_values.py  microscaling_conversion.py
attention_cuda/: README.md
attention_cuda/flash_attention/: attention_cuda_flash.cpp  attention_kernel_flash.cu  setup_flash.py  test_attention_flash.py
attention_cuda/original/: attention_cuda.cpp  attention_kernel.cu  setup.py  test_attention.py
chunked_prefill/: attention.py
cuda_mode/: run.sh
cuda_mode/lectures/: A_Practitioners_Guide_to_Triton.ipynb
cuda_mode/matmul/: .gitignore  CMakeLists.txt  Makefile  README.md  sgemm.cu  sgemm_bf16.cu  sgemm_fp16.cu  sgemm_fp32.cu
cuda_mode/matmul/benchmark_results/: kernel_10_autotune_results.txt
cuda_mode/matmul/scripts/: autotune_10.sh
cuda_mode/matmul/src/: cuda_utils.cu  cuda_utils.cuh  kernels.cuh  kernels_bf16.cuh  kernels_fp16.cuh  matrix_utils.cu  matrix_utils.cuh  run.cu  run.cuh  run_bf16.cu  run_bf16.cuh  run_fp16.cu  run_fp16.cuh  run_fp32.cu  run_fp32.cuh
cuda_mode/matmul/src/kernels/: 01_naive.cuh  03_shared_memory.cuh  05_2d_blocktiling.cuh  06_vectorize.cuh
cuda_mode/matmul/src/kernels_bf16_h100/: 01_simons_blog.cuh  02_tensor_core.cuh  02_tensor_core_col_major.cuh  02_tensor_core_orig2.cuh  02_tensor_core_orig_orig.cuh  02_tensor_core_row_major.cuh  03_larger_output_tile.cuh  04_producer_consumer.cuh  05_producer_consumer_larger_output_tile.cuh  06_block_scheduling_store_latency.cuh  07_faster_barriers.cuh  08_thread_block_cluster.cuh  095_micro_optimizations.cuh  10_async_stores.cuh  data_utils.cuh  hopper_utils.cuh
cuda_mode/matmul/src/kernels_fp16/: 01_hierarchical_tiling.cuh  02_hierarchical_tiling_unrolled.cuh  03_hierarcical_tiling_unrolled_vectorized.cuh  04_shared_memory_swizzling.cuh  05_async_copy.cuh  06_tuning_tile_dimensions.cuh  07_optimizing_index_calculation.cuh  08_double_buffering.cuh  load_store_utils.cuh  memcpy_utils.cuh
cuda_mode/matmul/src/kernels_fp32/: 02_global_coalescing.cuh  04_1d_blocktiling.cuh  10_cuda_warptiling.cuh
cuda_mode/misc_kernels/: overlap_kernel_cpu.cu  overlap_kernel_kernel.cu  pragma_unroll.cu  swizzling_simulation.py  transpose.cu
cuda_mode/warp_level_primitives/: broadcast_value_across_warp.cu  inclusive_plus_scan_across_subpartition.cu  reduction_across_warp.cu
cuda_mode_lectures/: run.sh
data_parallelism/: compare_ddp_non_ddp.py  distributed_sampler.py  log_ddp.txt  log_no_ddp.txt  train_mnist.py  train_mnist_ddp.py  train_mnist_mpi4py.py  verify.py
ddp_tp/: train_t5.py
decompose-k/: .gitignore  README.md  bench_decompose_k.py  custom_op_autotune_relu_dispatch.py  custom_op_decomposek.py  decompose_k_kernel.py  decompose_k_relu_kernel.py  decompose_k_triton_kernel_optimized.py  epilogue_fusion_relu_bench.py  gemm.py  inductor_mm_relu_epilogue_poc.py  pyproject.toml  standalone_decompose_k_triton.py
decompose-k/bench_results/: epilogue_relu_bf16.csv  plain_matmul_bf16.csv  plain_matmul_fp16.csv  plain_matmul_fp32.csv
decompose-k/bench_results_v2/: epilogue_relu_bf16.csv  plain_matmul_bf16.csv  plain_matmul_fp16.csv  plain_matmul_fp32.csv
decompose-k/bench_results_v3/: epilogue_relu_bf16.csv  plain_matmul_bf16.csv  plain_matmul_fp16.csv  plain_matmul_fp32.csv
decompose-k/compile_logs/: torch_mm_epilogue_large_k.py  torch_mm_epilogue_small_k.py
decompose-k/kernels/: __init__.py  cutedsl_fp32_shared16_candidate.py  cutedsl_splitk_gemm_candidate.py  cutedsl_tensorop_gemm_v4.py  decompose_k_triton_kernel_optimized.py
flash_attention_usage/: .gitignore  naive_attention.py  using_flash_attn_func.py  using_flash_attn_varlen_func.py  using_flash_attn_with_kvcache.py  varlen2.py
flash_attention_usage/inference/: README.md  chat_format.py  generation.py  generation_kv_cache.py  generation_kv_cache_paged.py  model_llama.py  (+3 more)
fsdp_t5/: T5_training.py  data_utils.py  train_utils.py
grouped_mm/: moe_grouped_mm.py  moe_grouped_mm_one_weight.py
linear_layer_triton/: README.md  activation_fns.py  generate_hf.py  linear_layer.py  linear_layer_triton.py  mlp_models.py  patch_linear_layer.py  patch_mlp.py  requirements.txt  setup.py  test_linear_layer.py  test_linear_layer_triton.py  test_patch_linear_layer.py  test_patch_mlp.py  test_patch_t5.py  utils.py
matmul_splitk/: bench_matmul.py  matmul.py  pid_scheduling.py  triton_util.py
medusa/: bash_run_train.sh  medusa_util.py  train_instruct.py
model_memory_usage/: profile_grad.pkl  profile_grad.py  profile_llm.py  profile_no_grad.pkl  profile_no_grad.py
multilora_inference/: .gitignore  bgmv_torch_sequential.py  lora_vs_full_matmul.py  multilora_impl.py  multilora_impl_prefill.py  naive_mm_lora.py  run_benchmark_with_tilelang.sh  setup.py  sgmv_torch_sequential.py  torch_bgmv_sequential.py
mvk/: base.py  mv_kemans.py  mv_kmeans_gpu.py  run_mvk.py  utils.py
pinned_memory_async/: README.md  bench.py  data_loader.py  gpu_to_cpu.py  non_blocking.py  pin_memory.py  pin_memory_non_blocking.py  pinned_sync.py  run_trace.py
profiling/: accurate_cuda_benchmarking.py
profiling_and_benchmarking/: profile_with_kernel_name.py
random/: flex_block_mask_compile.py  segmented_softmax.py  stream_torch.py
sglang_features/: .gitignore  base.py  prefix_caching.py
tensor_parallelism/: mlp_tp.py  mlp_tp_distributed.py  mlp_tp_distributed_generalized.py  mlp_tp_verify.py  verify.py
thrust/: Makefile_scan  Makefile_sort  cuda_utils.cu  inclusive_scan.cu  sort.cu
torch_backends/: aot_errors.txt  mlp_aot.py  mlp_jit.py  resnet_tensorrt_aot.py  resnet_tensorrt_jit.py
triton/: 01-vector-add.py  02-fused-softmax.py  03-matrix-multiplication.py  Triton_program_id_and_num_programs.ipynb  bench_matmul.py  breakpoint_square.py  dropout.py  fused_adam.py  grouped_gemm.py  hierarchical_scan.py  layer_norm.py  libdevice_function.py  matmul.py  matmul_bench_proton.py  persistent_matmul.py  show_profile.py
triton_linear/: batch_matmul_optimized.py  matmul_optimized.py  test_linear_layer.py
vllm_features/: .gitignore  base.py  prefix_caching.py  quantization.py  quantization_prefix_caching.py
(+507 files in other folders)
