[project]
name = "decompose-k"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.12.0.dev0",
    "triton>=3.7.0.dev0; sys_platform == 'linux'",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
torch = { index = "pytorch-nightly-cu128" }
triton = { index = "pytorch-nightly-cu128" }

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true